fixed cosmetic issues on top navbar and horizontal scrolling

--- a/css/motivate.css
+++ b/css/motivate.css
@@ -40,6 +40,7 @@ a:active {
 	margin-bottom: 0px;
 	vertical-align: middle;
 	background-color: #A8DACF;
+	border-radius: 0px;
 }
 
 .navbar-fixed-bottom {
